--- a/terraform/layers/deploy/src/buildspec.yml
+++ b/terraform/layers/deploy/src/buildspec.yml
@@ -17,6 +17,11 @@ phases:
       - terraform --version
       - echo "Completed installing terraform..."
 
+  pre_build:
+    commands:
+      - cd "$${CODEBUILD_SRC_DIR}/terraform/layers/${tf_deploy_layer}"
+      - terraform init -no-color --reconfigure --backend-config=../../environment/dev/${tf_deploy_layer}/${tf_deploy_layer}.s3.tfbackend
+  
     artifacts:
       files:
         - "**/*"
